--- a/app/src/main/res/layout/activity_login_pager.xml
+++ b/app/src/main/res/layout/activity_login_pager.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.alfinapp.ui.views.NonSwipeableViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/login_pager"
-    tools:context=".ui.login.LoginPagerActivity" />
+    android:layout_height="match_parent">
+
+    <com.alfinapp.ui.views.NonSwipeableViewPager
+        android:id="@+id/login_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.login.LoginPagerActivity" />
+
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+</RelativeLayout>
