--- a/app/src/main/res/layout/activity_login_pager.xml
+++ b/app/src/main/res/layout/activity_login_pager.xml
@@ -10,8 +10,10 @@
         android:layout_height="match_parent"
         tools:context=".ui.login.LoginPagerActivity" />
 
-    <androidx.core.widget.ContentLoadingProgressBar
+    <ProgressBar
+        android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 </RelativeLayout>
