--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:padding="12dp"
     android:visibility="visible">
 
     <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
