--- a/app/src/main/res/layout/fragment_otp_verify.xml
+++ b/app/src/main/res/layout/fragment_otp_verify.xml
@@ -5,6 +5,7 @@
     android:id="@+id/otp_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="12dp"
     android:visibility="visible">
 
     <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
